# sbz-switch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT.txt  README.md  appveyor.yml
.github/workflows/: build.yml
examples/: headphones.json  headphones.toml  headphones.yaml  speakers.toml
src/: com.rs  ctsndcr.rs  hresult.rs  lazy.rs  lib.rs  main.rs  media.rs  quickswitch.rs  soundcore.rs  winapiext.rs
src/com/: event.rs  mod.rs
src/media/: event.rs  mod.rs
src/soundcore/: consts.rs  core.rs  error.rs  event.rs  feature.rs  feature_iterator.rs  mod.rs  parameter.rs  parameter_iterator.rs
