[package]
name = "sbz-switch"
version = "3.1.1"
authors = ["Matthew Donoughe <mdonoughe@gmail.com>"]
description = "Utility for changing Sound Blaster parameters on Windows"
repository = "https://github.com/mdonoughe/sbz-switch/"
readme = "README.md"
keywords = ["windows", "sound"]
categories = ["command-line-utilities", "multimedia::audio"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
appveyor = { repository = "mdonoughe/sbz-switch" }

[dependencies]
clap = "2.32"
futures = "0.1"
indexmap = "1.0"
regex = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
slog = { version = "2.4", features = ["max_level_trace", "release_max_level_info"] }
sloggers = "0.3"
toml = "0.4"
winapi = { version = "0.3", features = ["combaseapi", "coml2api", "endpointvolume", "mmdeviceapi", "objbase", "oleauto", "synchapi", "unknwnbase", "winerror"] }

[package.metadata.docs.rs]
default-target = "i686-pc-windows-msvc"
