[package]
name = "sbz-switch"
version = "4.1.0"
authors = ["Matthew Donoughe <mdonoughe@gmail.com>"]
description = "Utility for changing Sound Blaster parameters on Windows"
repository = "https://github.com/mdonoughe/sbz-switch/"
readme = "README.md"
keywords = ["windows", "sound"]
categories = ["command-line-utilities", "multimedia::audio"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures = "0.3"
indexmap = "1"
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8"
slog = { version = "2", features = ["max_level_trace", "release_max_level_info"] }
sloggers = "1"
toml = "0.5"
winapi = { version = "0.3", features = ["combaseapi", "coml2api", "endpointvolume", "mmdeviceapi", "objbase", "oleauto", "synchapi", "unknwnbase", "winerror"] }

[package.metadata.docs.rs]
default-target = "i686-pc-windows-msvc"
