[package]
name = "sbz-switch"
version = "4.1.0"
authors = ["Matthew Donoughe <mdonoughe@gmail.com>"]
description = "Utility for changing Sound Blaster parameters on Windows"
repository = "https://github.com/mdonoughe/sbz-switch/"
readme = "README.md"
keywords = ["windows", "sound"]
categories = ["command-line-utilities", "multimedia::audio"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.61"

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures = "0.3"
indexmap = "1"
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8"
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.5"

[dependencies.windows]
version = "0.36.1"
features = [
    "alloc",
    "implement",
    "interface",
    "Win32_Foundation",
    "Win32_Media_Audio_Endpoints",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Shell_PropertiesSystem",
]

[package.metadata.docs.rs]
default-target = "i686-pc-windows-msvc"
